# vocal_biomarkers

./: .gitattributes  .gitignore  main.py  pyproject.toml
backend/: app.py  requirements.txt
backend/dam_model/: README.md  config.py  dam3.1.ckpt  featex.py  model.py  pipeline.py  requirements.txt
backend/dam_model/tuning/: indet_roc.py  optimal_ordinal.py
frontend/: .env.example  index.html  package-lock.json
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: AudioRecorder.jsx  FileUpload.jsx  ResultsDisplay.jsx  WaveformVisualizer.jsx
