[project]
name = "vocal-biomarkers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.12.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "click==8.3.1",
    "fastapi==0.132.1",
    "filelock==3.24.3",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "hf-xet==1.3.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==1.4.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "packaging==26.0",
    "peft==0.18.1",
    "psutil==7.2.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pysoundfile==0.9.0.post1",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "regex==2026.2.19",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "setuptools==82.0.0",
    "shellingham==1.5.4",
    "starlette==0.52.1",
    "sympy==1.14.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchcodec==0.10.0",
    "tqdm==4.67.3",
    "transformers==5.2.0",
    "typer==0.24.1",
    "typer-slim==0.24.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.41.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
]
